src/styles/Home.module.css
.heading__h1{
  font-family: 'Raleway', sans-serif;
  font-size: 4rem;
  color: whitesmoke;
  padding: 2rem;
  text-align: center;
  background: -webkit-linear-gradient(45deg, #303F9F,#00BCD4);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-top: 8rem;

}

.heading__h1__about{
  font-family: 'Raleway', sans-serif;
  font-size: 4rem;
  color: whitesmoke;
  padding: 2rem;
  text-align: center;
  background: -webkit-linear-gradient(45deg, #303F9F,#00BCD4);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-top: 5rem;
}

.heading__h2{
  font-size: 2rem;
  color: whitesmoke;
  text-align: center;
  margin-bottom: 2rem;
}

.heading__h3{
  font-size: 1.5rem;
  padding: 0 0.5rem 0 0.5rem;
}

.main__hero {
width: 100vw;
display: flex;
flex-direction: column;
flex-wrap: nowrap;
gap: 5rem;
justify-content: center;
}


.search__form{
  display: flex;
  flex-wrap: wrap;
  width: 80%;
  margin: auto;
}

.search__input{
  width: 75%;
  font-size: 2rem;
  border-radius: 25px 0 0 25px;
  border: 2px ;
  padding: 1rem;
}

.search__input:focus {
  outline:  1px solid  #C5CAE9;
}

.search__button{
  width: 25%;
  font-size: 1rem;
  border-radius: 0 25px 25px 0;
  padding: 1.5rem 0;
  cursor: pointer;
  border: 0;
  background-color: #C5CAE9;
  color:#212121;
  transition: all .2s ease-in;
}

.clear__results{
  display: flex;
  width:100%;
  border: 0;
  background-color: transparent;
  color:white;
  cursor: pointer;
  margin: auto;
  justify-content: center;
}

.clear__results:hover{
  text-decoration: underline;
}


.search__button:hover{
  background-color: #00BCD4;
}


.search__no__results{
  text-align: center;
  color: whitesmoke;
}


.search__results__length{
  text-align: center;
  color: whitesmoke;
}

#results__div{
  text-decoration: none;
}

.search__results{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
  width: 95%;
  margin: 0 auto 2rem auto;  
}

.search__results__random{
  display: flex;
  gap: 2rem;
  width: 90%;
  margin: 0 auto 2rem auto;
  justify-content: center;
}

.card{
  text-align: center;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  border: 1px solid;
  border-color: muted;
  border-radius: 25px;
  line-height: 2;
  background-color: whitesmoke;
  transition: transform .2s; 
}

.card:hover{
  transform: scale(1.05);
}

.card__container{
  display: flex;
  color: #141414;
  text-decoration: none; 
  flex-direction: column;
  border-radius:20px;
  overflow: hidden;
}

.card__random{
  text-align: center;
  width: 500px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  border: 1px solid;
  border-color: muted;
  border-radius: 25px;
  line-height: 2;
  background-color: whitesmoke;
  transition: transform .2s; 
}

.card__random:hover{
  transform: scale(1.05);
}


.emojis{
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  width: 150px;
  margin: auto;
}

.recommend__movie{
  background-color: #FFFFFF;
    position: absolute;
    bottom: 90%;
    padding: 10px 15px;
    width: 185px;
    border-radius: 5px;
    font-size: 14px;
    opacity: 0;
    transition: all .5s;
    color: #212121;
}

.recommend__movie::after{
  content: '';
  border-width: 5px;
  border-style: solid;
  border-color: #fff transparent transparent transparent;
  position: absolute;
  top: 100%;
  left: 40%;
  margin-left: 5%;
}

.fontawesome__icon{
  color: #C5CAE9;
  padding: 10px 15px;
  border-radius: 10px;
  font-size: 5rem;
}

.emojis:hover .recommend__movie{
  opacity: 1;
  transform: translateY(-10px);
  animation: shake;
}

.fontawesome__icon:hover {
  color: #00BCD4;
  animation: shake 150ms 2 linear;
  -moz-animation: shake 150ms 2 linear;
  -webkit-animation: shake 150ms 2 linear;
  -o-animation: shake 150ms 2 linear;
}

.image__container{
  height: 80%;
  overflow: hidden;
}

.text__container{
height: 20%;
padding-bottom: 2rem;
}

.no__image__icon{
  color: black;
  padding: 5rem 15px;
  font-size: 5rem;
}

.about{
  width: 95%;
  margin: auto;
}

.about__p{
  margin: 2rem 0;
  padding: 2rem;
  font-size: 1.5rem;
  line-height: 3.5rem;
  color: #212121;
  background-color: #fff;

}

.about__p a{
  color: #00BCD4;
}

.about__p a:hover{
  text-decoration: underline;
}






  @keyframes shake {
    0% {
      transform: translate(3px, 0);
    }
    50% {
      transform: translate(-3px, 0);
    }
    100% {
      transform: translate(0, 0);
    }
  }

  @-moz-keyframes shake {
    0% {
      -moz-transform: translate(3px, 0);
    }
    50% {
      -moz-transform: translate(-3px, 0);
    }
    100% {
      -moz-transform: translate(0, 0);
    }
  }

  @-webkit-keyframes shake {
    0% {
      -webkit-transform: translate(3px, 0);
    }
    50% {
      -webkit-transform: translate(-3px, 0);
    }
    100% {
      -webkit-transform: translate(0, 0);
    }
  }

  @-ms-keyframes shake {
    0% {
      -ms-transform: translate(3px, 0);
    }
    50% {
      -ms-transform: translate(-3px, 0);
    }
    100% {
      -ms-transform: translate(0, 0);
    }
  }

  @-o-keyframes shake {
    0% {
      -o-transform: translate(3px, 0);
    }
    50% {
      -o-transform: translate(-3px, 0);
    }
    100% {
      -o-transform: translate(0, 0);
    }
  }
  

  @media only screen and (min-width: 1200px) {

.heading__h1{
  font-size: 8rem;
  padding: 2rem;
  margin-top: 2rem;

}

.heading__h1__about{
  font-size: 8rem; 
}

.heading__h2{
  font-size: 2rem;
  color: whitesmoke;
  text-align: center;
  margin-bottom: 2rem;
}

.heading__h3{
  font-size: 1.5rem;
  padding: 0 0.5rem 0 0.5rem;
}

.search__form{
  width: 50vw;
  margin: auto;
}

.search__input{
  width: 85%;
  font-size: 2rem;
  padding: 1rem;
}

.search__input:focus {
  outline:  1px solid  #C5CAE9;
}

.search__button{
  width: 15%;
  height: 100%;
  font-size: 2rem;
  padding: 1rem;
}


.search__results{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 2rem;
  width: 90%;
  margin: 0 auto 2rem auto;  
}

.card__container{
  height: 100%;
}

.text__container{
  padding-bottom: 5rem;
  }

.about{
  width: 60%;
  margin: auto;
  color: #fff;
  font-size: 1.8rem;
  line-height: 2.5rem;
}

.no__image__icon{
  height: 200px;
}

.about__p{
  margin: 2rem 0;
}


  }




  

  

